crates/mel-cli/src/snapshots/mel_inspect__tests__sema_var_init_type_mismatch_via_call.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 1221
expression: "render_snapshot(\"sema/proc/var-init-type-mismatch-via-call.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/var-init-type-mismatch-via-call.mel\"),)"
---
source: sema/proc/var-init-type-mismatch-via-call.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 1
[31mError:[0m sema: variable "$value" has declared type Int but initializer is String
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/proc/var-init-type-mismatch-via-call.mel:5:14 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[35mh[0m[35me[0m[35ml[0m[35mp[0m[35me[0m[35mr[0m[35m([0m[35m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m              [35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m┬[0m[35m─[0m[35m─[0m[35m─[0m  
 [38;5;240m  │[0m                  [35m╰[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m variable "$value" has declared type Int but initializer is String
[38;5;246m───╯[0m
